--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,4 +26,18 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+
+    //recyclerview
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
+
+    //cardview
+    implementation 'androidx.cardview:cardview:1.0.0'
+
+    //glide
+    implementation 'com.github.bumptech.glide:glide:4.10.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.10.0'
+
+    //image circleView
+    implementation 'de.hdodenhof:circleimageview:3.0.1'
+
 }
