--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,19 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
 
+    //Material design
+    def materialDesignVersion = "1.0.0"
+    implementation "com.google.android.material:material:$materialDesignVersion"
+
+
+    //Lifecycle components
+    // ViewModel and LiveData (life cycle components)
+    def  archLifecycleVersion = "2.2.0"
+    implementation "androidx.lifecycle:lifecycle-extensions:$archLifecycleVersion"
+    implementation "androidx.lifecycle:lifecycle-runtime:$archLifecycleVersion"
+    annotationProcessor "android.arch.lifecycle:compiler:$archLifecycleVersion"
+
+
     //recyclerview
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
 
