--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,11 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        compileOptions {
+            sourceCompatibility JavaVersion.VERSION_1_8
+            targetCompatibility JavaVersion.VERSION_1_8
+        }
     }
     buildTypes {
         release {
@@ -17,15 +22,23 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
+
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+
+    //ButterKnife
+    def ButterKnifeVersion = "10.2.1"
+    implementation "com.jakewharton:butterknife:$ButterKnifeVersion"
+    annotationProcessor "com.jakewharton:butterknife-compiler:$ButterKnifeVersion"
 
     //Material design
     def materialDesignVersion = "1.0.0"
@@ -34,16 +47,16 @@ dependencies {
 
     //Lifecycle components
     // ViewModel and LiveData (life cycle components)
-    def  archLifecycleVersion = "2.2.0"
+    def archLifecycleVersion = "2.2.0"
     implementation "androidx.lifecycle:lifecycle-extensions:$archLifecycleVersion"
     implementation "androidx.lifecycle:lifecycle-runtime:$archLifecycleVersion"
     annotationProcessor "android.arch.lifecycle:compiler:$archLifecycleVersion"
 
 
-    //recyclerview
+    //recyclerView
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
 
-    //cardview
+    //cardView
     implementation 'androidx.cardview:cardview:1.0.0'
 
     //glide
@@ -52,5 +65,8 @@ dependencies {
 
     //image circleView
     implementation 'de.hdodenhof:circleimageview:3.0.1'
+
+
+
 
 }
